Fix "Order summary" items wrapping

--- a/css/compat/themes/compat-thegem-317-beta-7.css
+++ b/css/compat/themes/compat-thegem-317-beta-7.css
@@ -1,3 +1,7 @@
+body.theme-thegem div.woocommerce .fc-wrapper #order_review table.woocommerce-checkout-review-order-table .product-name > img {
+  margin-right: 0;
+}
+
 body.theme-thegem div.woocommerce form .form-row {
   margin-top: 0;
 }
